--- a/test.htm
+++ b/test.htm
@@ -2,7 +2,7 @@
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <html lang="en">
 <head>
-    <base href="http://mademophp.azurewebsites.net/" />
+    <base href="http://aspnet-----------j1.azurewebsites.net/" />
     <script src="Scripts/jquery-1.6.4.min.js"></script>
     <script src="Scripts/jquery.signalR-1.0.0-rc2.min.js"></script>
     <script src="signalr/hubs" type="text/javascript"></script>
