--- a/test.htm
+++ b/test.htm
@@ -32,7 +32,7 @@
         });
     </script>
 
-    <h1>ASP.NET: discussion via SignalR</h1>
+    <h1>ASP.NET: discussion via SignalR!</h1>
     <div class="form-actions">
         <input type="text" class="input-block-level" id="msg" />
         <input type="button" id="broadcast" class="btn btn-small btn-success" value="Envoyer"/>
